fix: add gap + remove import

--- a/src/components/walletconnect/SessionList/styles.module.css
+++ b/src/components/walletconnect/SessionList/styles.module.css
@@ -1,6 +1,9 @@
 .sessionList {
   width: 100%;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-1);
 }
 
 .sessionListItem {
